# kbo-gui

./: COPYRIGHT  Cargo.toml  Dioxus.toml  README.md
.cargo/: config.toml
assets/: main.css
patches/: sablast+0.2.0.patch  sbwt+0.3.2.patch  sbwt+0.3.3.patch  simple-sds-sbwt+0.3.1.patch
src/: common.rs  components.rs  main.rs  opts.rs  util.rs  webgui.rs
src/components/: call.rs  common.rs  find.rs  map.rs  mod.rs
src/dioxus_sortable/: mod.rs  rsx.rs  use_sorter.rs
