[package]
name = "kbo-gui"
version = "0.2.1"
authors = ["Tommi Mäklin <tommi@maklin.fi>"]
edition = "2021"
rust-version = "1.80.0"
homepage = "https://docs.rs/kbo"
repository = "https://github.com/tmaklin/kbo-gui"
license = "MIT OR Apache-2.0"

[dependencies]
## core
kbo = "0.5.1"
sbwt = "0.3.7"
tokio = { version = "1.40.0", features = ["rt"] }

## .vcf writing
chrono = "0.4.40"

# Debug
dioxus-logger = "0.6.2"

## GUI
dioxus = { version = "0.6.3", features = ["web", "router"] }
manganis = "0.2.2"

## Subdependencies that need features enabled
getrandom = { version = "0.2", features = ["js"] }

gloo-timers = { version = "0.3.0", features = ["futures"] }

[dependencies.needletail]
version = "0.6.0"
features = ["flate2"]
default-features = false

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
